--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+* {
+  -webkit-user-select: none;
+  user-select: none;
+}
