made navbar bootstrapped

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,8 @@ body {
   -webkit-user-select: none;
   user-select: none;
 }
+
+#services-dropdown-menu.dropdown-toggle {
+  color: white !important;
+}
+
