--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,12 @@ body {
   user-select: none;
 }
 
+a{
+  text-decoration: none;
+}
+
+
+
 #services-dropdown-menu.dropdown-toggle {
   color: white !important;
 }
