--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 
 /* base styling */
 body {
-  background: var(--background);
+  background-color: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
